# scrcpy

./: README.md  RELEASE_BASELINE_DUPLEX.md  meson.build  meson_options.txt
app/src/adb/: adb.c
doc/: FEATURES_BACKLOG.md  build.md  connectivity-troubleshooting.md  duplex-overview.md  duplex-polish.md  duplex-protocol-v1.md  windows.md
duplex/reverse-android-view/: README.md  settings.gradle
duplex/reverse-android-view/app/: build.gradle
duplex/reverse-android-view/app/src/main/: AndroidManifest.xml
duplex/reverse-android-view/app/src/main/java/com/duplex/reverseview/: DuplexVideoReceiver.java  DuplexWire.java  MainActivity.java  TouchControlView.java
duplex/reverse-android-view/app/src/main/res/values/: strings.xml  themes.xml
duplex/reverse-host/: README.md  meson.build
duplex/reverse-host/include/: duplex_capture.h  duplex_encode.h  duplex_input.h  sc_duplex_proto.h
duplex/reverse-host/src/: reverse_host.c
duplex/reverse-host/src/unix/: duplex_input_stub.c
duplex/reverse-host/src/win/: capture_dxgi.c  capture_dxgi_stub.c  duplex_input_win.c  encode_lavc.c
packaging/: README.md  THIRD_PARTY_NOTICES.txt
